# task_test

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20241118_0001_create_tasks_table.py  20251118_0001_create_tasks_table.py
app/: main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  tasks.py
app/core/: config.py
app/db/: __init__.py  session.py
app/models/: __init__.py  task.py
app/mq/: __init__.py  publisher.py
app/repositories/: __init__.py  task_repository.py
app/schemas/: __init__.py  task.py
app/services/: __init__.py  exceptions.py  task_service.py  worker_service.py
app/workers/: __init__.py  processor.py  runner.py  worker.py
task_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_tasks_api.py
