[project]
name = "task-service"
version = "0.1.0"
description = "Асинхронный сервис управления задачами на FastAPI"
authors = [{ name = "Candidate", email = "candidate@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.29,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "aio-pika>=9.4.1,<10.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.5,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "asgi-lifespan>=2.1.0,<3.0.0",
    "ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

